Fixed Dark Mode CSS for smoother transition

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -55,9 +55,14 @@
     font-family: Arial, sans-serif;
     padding: 1px 20px 20px 20px;
     min-width: 300px;
-
-    transition: background-color 0.3s, color 0.3s;
+    /* transition: background-color 0.3s, color 0.3s; */
   }
+
+  body.enable-transitions,
+  body.enable-transitions * {
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  }
+
   
   #scan-instruction {
     color: gray; 
